# momentum-strategy-research

./: .gitignore  README.md  pyproject.toml
configs/: ibkr.yaml  phase2_cost_stress_shortlist.yaml  phase2_decay_cost_stress_shortlist.yaml  phase2_decay_grid_presets.yaml  phase3_cost_stress_shortlist.yaml  phase3_fastdd_cost_stress_shortlist.yaml  phase3_fastdd_grid_presets.yaml  phase4_cost_stress_shortlist.yaml  phase4_defensive_flat_cost_stress_shortlist.yaml  phase4_defensive_flat_grid_presets.yaml  phase5_full_grid_presets.yaml  research_windows.yaml  risk_event_driven.yaml  sensitivity_book_train1.yaml  sensitivity_presets.yaml  sensitivity_presets_train1.yaml  sensitivity_presets_train1_alpha.yaml  sensitivity_rebal_train1.yaml  sensitivity_thesis_train1.yaml  strategy_defaults.yaml  train1_levers_presets.yaml  train1_risk_grid_presets.yaml  train1_signal_grid_presets.yaml  train1_universe_grid_presets.yaml  universe.yaml
docs/: contraintes_institutionnelles.md  objectifs.md  politique_donnees.md
docs/research/: SPEC_GEL.md  (+12 more)
tests/: conftest.py  test_alpha_strategy_params_path.py  test_archive_run.py  test_book_forward_attribution.py  test_config_overlay.py  test_data_quality_report.py  test_deployment_ramp.py  test_engine_rebal_extras.py  test_event_driven_engine_integration.py  test_institutional_audit.py  test_institutional_pipeline.py  test_matrix.py  test_minimal_backtest.py  test_momentum.py  test_rebalance_calendar.py  test_sensitivity_phase0_diagnostics.py  test_signal_generator_params.py  test_strategy_config.py  test_universe.py  test_validators.py
(+59 files in other folders)
