[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum-strategy"
version = "0.1.0"
description = "Pipeline données IBKR, signal momentum et backtest minimal institutionnel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "ib_insync>=0.9.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
mstrat = "momentum_strategy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
momentum_strategy = ["_config_body.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
